# terry

./: Cargo.toml  README.en.md  README.md  README.zh-CN.md  fix_channels.py  fix_project.py  fix_project2.py  fix_project3.py  fix_project4.py  fix_unread.py  fix_unread2.py  fix_workspace.py  fix_workspace2.py  fix_workspace3.py  patch_agent_panel.py  patch_agent_panel2.py  patch_agent_panel3.py  patch_agent_panel_allow.py  patch_agent_panel_arc.py  patch_agent_panel_fields.py  patch_app_title_bar.py  patch_bounded_channel.py  patch_channel.py  patch_channel2.py  patch_client_lib.py  patch_colors.py  patch_create_terminal_shell.py  patch_dependencies.py  patch_enums.py  patch_get.py  patch_hyperlinks.py  patch_init.py  patch_item.py  patch_item2.py  patch_item3.py  patch_itemhandle.py  patch_main.py  patch_main_order.py  patch_mcp_fix.py  patch_mcp_spec.py  (+46 more)
.cargo/: config.toml
.github/workflows/: release.yml
assets/settings/: default.json  initial_user_settings.json
crates/: extension_api
crates/agent_ui/: Cargo.toml
crates/extension_host/: build.rs
crates/i18n/: Cargo.toml
crates/i18n/src/: i18n.rs  translations.rs
crates/session/: Cargo.toml
ink-mcp-server/: Cargo.toml
ink-mcp-server/src/: main.rs
resources/: AppIcon.icns
script/: package-linux.sh  package-macos.sh  package-windows.ps1
src/: agent_panel.rs  app_icon.rs  app_menus.rs  app_title_bar.rs  file_list_panel.rs  keymap_settings.rs  llm_provider_settings.rs  main.rs  settings_window.rs  status_bar_items.rs  terminal_list_panel.rs
terry-mcp-server/: Cargo.toml
zedagent/: Cargo.toml
(+52 files in other folders)
